--- a/.env
+++ b/.env
@@ -16,6 +16,6 @@ DB_HOST=localhost
 DB_USER=pisang
 DB_PASSWORD=P3rt4m4xTurb0
 DB_DIALECT=mysql
-DB_NAME=fresh_storage
+DB_NAME=fresh_storages
 DB_LOG=false
 DB_PORT=3306
