--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
         "migrate:up": "npx sequelize-cli db:migrate"
     },
     "dependencies": {
+        "adm-zip": "^0.5.16",
+        "bullmq": "^5.63.0",
         "cors": "^2.8.5",
         "dotenv": "^16.6.1",
         "express": "^5.1.0",
+        "fs-extra": "^11.3.2",
         "http-status-codes": "^2.3.0",
+        "ioredis": "^5.8.2",
         "joi": "^17.13.3",
         "jsonwebtoken": "^9.0.2",
         "multer": "^1.4.5-lts.2",
@@ -17,6 +21,7 @@
         "sequelize": "^6.37.7",
         "swagger-jsdoc": "^6.2.8",
         "swagger-ui-express": "^5.0.1",
+        "uuid": "^13.0.0",
         "winston": "^3.17.0"
     }
 }
