--- a/.env
+++ b/.env
@@ -6,16 +6,16 @@ UPLOAD_DIR=uploads
 MAX_FILE_SIZE="2 * 1024 * 1024"
 ALLOWED_MIME_TYPES='["image/jpeg", "image/png", "application/pdf",]'
 
-DB_HOST=localhost
-DB_PORT=8889
-DB_NAME=fresh_storage
-DB_USER=root
-DB_PASSWORD=root
-
 # DB_HOST=localhost
-# DB_USER=pisang
-# DB_PASSWORD=P3rt4m4xTurb0
+# DB_PORT=8889
+# DB_NAME=fresh_storage
+# DB_USER=root
+# DB_PASSWORD=root
+
+DB_HOST=localhost
+DB_USER=pisang
+DB_PASSWORD=P3rt4m4xTurb0
 DB_DIALECT=mysql
-# DB_NAME=fresh_storages
-# DB_LOG=false
-# DB_PORT=3306
+DB_NAME=fresh_storages
+DB_LOG=false
+DB_PORT=3306
